# qsub-slurm

./: Makefile.am  configure.ac  qsub.in
